# Novel-Generator

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_story_quality_v2.py  0003_provider_routing.py  0004_developmental_rewrite.py  0005_run_resilience.py  0006_quality_profiles.py  0007_standard_polish_pass.py
docs/: backup-and-restore.md  releasing.md  self-hosting.md
src/novel_generator/: __init__.py  bootstrap.py  db.py  dependencies.py  main.py  models.py  repositories.py  schemas.py  settings.py  worker.py
src/novel_generator/routers/: api.py  ui.py
src/novel_generator/services/: editorial.py  exports.py  genre_profiles.py  ollama.py  openai_compatible.py  pipeline.py  prompts.py  provider_errors.py  providers.py  runner.py  state.py  storage.py
src/novel_generator/static/: style.css  ui.js
src/novel_generator/templates/: base.html  index.html  project_detail.html  project_new.html  projects.html  provider_settings.html  run_compare.html  run_detail.html
templates/: index.html  result.html
tests/: conftest.py  test_api.py  test_editorial.py  test_exports.py  test_migrations.py  test_ollama.py  test_openai_compatible.py  test_pipeline.py  test_prompts.py  test_ui_routes.py
